Uploaded image for project: 'Apache Avro'
  1. Apache Avro
  2. AVRO-1406

Avro C++ GenericRecord (GenericDatum, etc.) doesn't support getters and setters with field name argument

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 1.7.5
    • 1.7.6
    • c++

    Description

      In Java implementation there is GenericData.Record which can use field names to set and get data. There is nothing similar in C++ implementation.

      Attachments

        1. AVRO-1406_3.patch
          5 kB
          Iaroslav Zeigerman
        2. AVRO-1406_2.patch
          2 kB
          Iaroslav Zeigerman
        3. AVRO-1406.patch
          4 kB
          Iaroslav Zeigerman
        4. AVRO-1406.patch
          4 kB
          Iaroslav Zeigerman

        Activity

          People

            zyoma Iaroslav Zeigerman
            zyoma Iaroslav Zeigerman
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: