AVRO-1406 Avro C++ GenericRecord (GenericDatum, etc.) doesn't support getters and setters with field name argument

git-svn-id: https://svn.apache.org/repos/asf/avro/trunk@1551029 13f79535-47bb-0310-9956-ffa450edef68